--- a/radarr/config.json
+++ b/radarr/config.json
@@ -18,12 +18,16 @@
     "share:rw",
     "ssl"
   ],
-  "webui": "http://[HOST]:[PORT:7878]",
+  "webui": "[PROTO:use_ssl]://[HOST]:[PORT:7878]",
   "boot": "auto",
   "environment": {
     "PUID": "0",
     "PGID": "0"
   },
   "options": {},
-  "schema": {}
+  "schema": {},
+  "ingress": true,
+  "panel_title": "Radarr",
+  "panel_admin": true,
+  "panel_icon": "mdi:movie-roll"
 }
