--- a/radarr/config.json
+++ b/radarr/config.json
@@ -18,7 +18,7 @@
     "share:rw",
     "ssl"
   ],
-  "webui": "[PROTO:use_ssl]://[HOST]:[PORT:7878]",
+  "webui": "http://[HOST]:[PORT:7878]/",
   "boot": "auto",
   "environment": {
     "PUID": "0",
