--- a/radarr/config.json
+++ b/radarr/config.json
@@ -19,7 +19,7 @@
     "ssl"
   ],
   "auth_api": true,
-  "webui": "[PROTO:use_ssl]://[HOST]:[PORT:7878]/",
+  "webui": "http://[HOST]:[PORT:7878]",
   "boot": "auto",
   "environment": {
     "PUID": "0",
@@ -28,6 +28,7 @@
   "options": {},
   "schema": {},
   "ingress": true,
+  "ingress_port": 7878,
   "panel_title": "Radarr",
   "panel_admin": true,
   "panel_icon": "mdi:movie-roll"
