--- a/radarr/config.json
+++ b/radarr/config.json
@@ -35,7 +35,7 @@
   },
   "options": {},
   "schema": {},
-  "ingress", true,
+  "ingress": true,
   "panel_title": "Radarr",
   "panel_icon": "mdi:movie-roll"
 }
